[project]
name = "kahyata-payments"
version = "0.1.0"
description = "Payment backend for Kahyata's Consultancy Firm – Flutterwave & MoneyUnify integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
